2008-05-12  Aurelien Jarno  <aurelien@aurel32.net>

[BZ #6506]
	* sysdeps/hppa/fpu/fesetenv.c: bufptr is always read, temp is
	read while writing back status word.